<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <EditText
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/filterTextOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="300dp"
        android:text="@string/owner_def_value"
        android:hint="@string/label_owner"
        android:autofillHints="@string/label_owner"
        android:inputType="textPersonName" />

    <EditText
        app:layout_constraintTop_toBottomOf="@+id/filterTextOwner"
        android:id="@+id/filterTextRepo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="300dp"
        android:text="@string/repo_def_value"
        android:hint="@string/label_repo"
        android:autofillHints="@string/label_repo"
        android:inputType="textPersonName" />

    <Button
        app:layout_constraintTop_toBottomOf="@+id/filterTextRepo"
        android:id="@+id/filterButtonSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="300dp"
        android:text="@string/action_search" />

</androidx.constraintlayout.widget.ConstraintLayout>